# MCCO1

./: .gitignore  README.md
attribute-grammars/: README.md  cco-ag.cabal  compile  compile.sh  test.sh
attribute-grammars/doc/: Makefile  documentation.md
attribute-grammars/examples/: Test1.hs  doubleTypeDeclarations.hs.test  keywords.hs.test  letDepth.hs.test  nrOfLeaves.hs.test  sameLevelShadowing.hs.test  shadowing.hs.test  totalTest.hs.test
attribute-grammars/src/: Main.hs  Makefile  Types.hs
attribute-grammars/src/Main/: Args.hs  Compile.hs  CompileUtils.hs  PhaseLexer.hs  PhaseParser.hs  PhaseResolveOperators.hs  PhaseStaticChecks.hs  Version.hs
attribute-grammars/src/ModuleSystem/: ImportEnvironment.hs
attribute-grammars/src/Parser/: CollectFunctionBindings.hs  LayoutRule.hs  Lexer.hs  LexerMessage.hs  LexerMonad.hs  LexerToken.hs  OperatorTable.hs  ParseLibrary.hs  ParseMessage.hs  Parser.hs  ResolveOperators.ag
attribute-grammars/src/StaticAnalysis/: StaticChecks.ag
attribute-grammars/src/Syntax/: .UHA_Utils.hs.marks  UHA_OneLine.ag  UHA_Pretty.ag  UHA_Range.hs  UHA_Syntax.ag  UHA_Utils.hs
attribute-grammars/src/Types/: Classes.hs  Kinds.hs  Primitive.hs  Qualification.hs  Quantification.hs  Schemes.hs  Substitution.hs  Synonym.hs  Unification.hs
attribute-grammars/src/Utils/: Id.hs  Messages.hs  OneLiner.hs  Similarity.hs  Texts.hs  Utils.hs  Warnings.hs
monotone-frameworks/: .gitignore  Makefile  readme.md
monotone-frameworks/doc/: documentation.md
monotone-frameworks/examples/: aexpr_conditional.c  aexpr_scoped.c  aexpr_simple.c  fib.c  (+15 more)
(+13 files in other folders)
